--- a/src/numeric-content.scss
+++ b/src/numeric-content.scss
@@ -96,7 +96,6 @@ $fd-numeric-content-elements-spacing-s: 0.5rem !default;
     @include fd-reset();
 
     display: flex;
-    flex: 1;
     height: 100%;
     overflow: hidden;
     padding-top: 0.5rem;
